# quirc-rs-impl

./: .gitignore  .travis.yml  Cargo.toml  README.md  aliases.js  gh_rsa.enc  quirc-rs-impl.sublime-project  search-index.js
c-examples/: decode.cpp  qrtest.c  trivial-funxions.cpp
quirc_impl/: all.html  fn.henlo.html  index.html  sidebar-items.js
quirc_impl/constants/: QUIRC_DATA_TYPE_ALPHA.v.html  QUIRC_DATA_TYPE_BYTE.v.html  QUIRC_DATA_TYPE_KANJI.v.html  QUIRC_DATA_TYPE_NUMERIC.v.html  QUIRC_ECC_LEVEL_H.v.html  QUIRC_ECC_LEVEL_L.v.html  QUIRC_ECC_LEVEL_M.v.html  QUIRC_ECC_LEVEL_Q.v.html  QUIRC_ECI_IBM437.v.html  QUIRC_ECI_ISO_8859_1.v.html  QUIRC_ECI_ISO_8859_13.v.html  QUIRC_ECI_ISO_8859_15.v.html  QUIRC_ECI_ISO_8859_2.v.html  QUIRC_ECI_ISO_8859_3.v.html  QUIRC_ECI_ISO_8859_4.v.html  QUIRC_ECI_ISO_8859_5.v.html  QUIRC_ECI_ISO_8859_6.v.html  QUIRC_ECI_ISO_8859_7.v.html  QUIRC_ECI_ISO_8859_8.v.html  QUIRC_ECI_ISO_8859_9.v.html  QUIRC_ECI_SHIFT_JIS.v.html  QUIRC_ECI_UTF_8.v.html  QUIRC_ECI_WINDOWS_874.v.html  QUIRC_MAX_BITMAP.v.html  QUIRC_MAX_PAYLOAD.v.html  constant.QUIRC_DATA_TYPE_ALPHA.html  constant.QUIRC_DATA_TYPE_BYTE.html  constant.QUIRC_DATA_TYPE_KANJI.html  constant.QUIRC_DATA_TYPE_NUMERIC.html  constant.QUIRC_ECC_LEVEL_H.html  constant.QUIRC_ECC_LEVEL_L.html  constant.QUIRC_ECC_LEVEL_M.html  constant.QUIRC_ECC_LEVEL_Q.html  constant.QUIRC_ECI_IBM437.html  constant.QUIRC_ECI_ISO_8859_1.html  constant.QUIRC_ECI_ISO_8859_13.html  constant.QUIRC_ECI_ISO_8859_15.html  constant.QUIRC_ECI_ISO_8859_2.html  (+14 more)
src/: constants.rs  ffi.rs  lib.rs
src/ops/: mod.rs  (+1 more)
(+204 files in other folders)
