[package]
name = "quirc-impl"
description = "Rust QR code decoder, but for real this time"
documentation = "https://rawcdn.githack.com/nabijaczleweli/quirc-rs-impl/doc/quirc_impl/index.html"
repository = "https://github.com/nabijaczleweli/quirc-rs-impl"
readme = "README.md"
keywords = ["QR", "code", "decode"]
categories = ["parser-implementations"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
libc = "0.2"


[lib]
crate-type = ["dylib"]
